Replace Guava immutable collections with JDK equivalents
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>